# calibre_plugin_biblionetka

./: .gitignore  Pipfile  README.rst  __init__.py  changelog.txt  config.py  config_widget.py  parser.py  plugin_base.py  plugin_meta.py  pyproject.toml  utils.py
src/: __init__.py  changelog.txt  config_widget.py  parser.py  parser_base.py  plugin_base.py  plugin_meta.py
