[tool.poetry]
name = "calibre_plugin_biblionetka"
version = "0.1.0"
description = "Calibre plugin to download ebook metadata from biblionetka.pl."
authors = ["fenuks"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.0"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
pylint = "^2.4.4"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
